--- a/examples/wire.html
+++ b/examples/wire.html
@@ -2,23 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Holster - test examples</title>
+    <title>Holster.wire - test examples</title>
   </head>
   <body>
-    <h2>Holster - test examples</h2>
+    <h2>Holster.wire - test examples</h2>
     <p>
       This file loads the development build of Holster and then runs
-      <code>index.js</code>, which contains examples using the Holster API. See
-      the console log for test output.
+      <code>wire.js</code>, which contains examples from
+      <a href="https://github.com/gundb/port">Porting Gun</a>.
     </p>
     <p>
-      See <a href="wire.html">wire.html</a> for examples that use the wire spec.
+      These examples use the wire spec to show how conflict resolution works,
+      see the console log for test output.
     </p>
     <p>
       To run the production build, switch <code>src</code> to
       <code>"../build/holster.min.js"</code> in this file.
     </p>
     <script src="../build/holster.js"></script>
-    <script src="index.js"></script>
+    <script src="wire.js"></script>
   </body>
 </html>
