Let CommonJS die.

--- a/examples/wire.html
+++ b/examples/wire.html
@@ -19,7 +19,6 @@
       To run the production build, switch <code>src</code> to
       <code>"../build/holster.min.js"</code> in this file.
     </p>
-    <script src="../build/holster.js"></script>
-    <script src="wire.js"></script>
+    <script type="module" src="./wire.js"></script>
   </body>
 </html>
