--- a/examples/index.html
+++ b/examples/index.html
@@ -12,12 +12,13 @@
       the console log for test output.
     </p>
     <p>
-      See <a href="wire.html">wire.html</a> for examples that use the wire spec.
+      See <a href="/examples/wire.html">wire.html</a> for examples that use the
+      wire spec.
     </p>
     <p>
       To run the production build, switch <code>src</code> to
       <code>"../build/holster.min.js"</code> in this file.
     </p>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/examples/index.js"></script>
   </body>
 </html>
