Add `npm run dev` and update docs
Since I broke the ability to run `/example/index.html` from a `file://`
URL in PR #1, I have now added a local dev server and updated
documentation.

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,9 +16,9 @@
       wire spec.
     </p>
     <p>
-      To run the production build, switch <code>src</code> to
-      <code>"../build/holster.min.js"</code> in this file.
+      To run the production build, switch the <code>import</code> path in
+      <code>index.js</code> to <code>"../build/holster.js"</code>.
     </p>
-    <script type="module" src="/examples/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
