--- a/examples/wire.html
+++ b/examples/wire.html
@@ -16,8 +16,8 @@
       see the console log for test output.
     </p>
     <p>
-      To run the production build, switch <code>src</code> to
-      <code>"../build/holster.min.js"</code> in this file.
+      To run the production build, switch the <code>import</code> path in
+      <code>wire.js</code> to <code>"../build/holster.js"</code>.
     </p>
     <script type="module" src="./wire.js"></script>
   </body>
