--- a/examples/wire.html
+++ b/examples/wire.html
@@ -12,6 +12,12 @@
       the console log for test output.
     </p>
     <p>
+      These tests also make two updates in random order, but the wire API can
+      set state vectors on updates to control which value should be applied.
+      This means when the "species" field is logged it will always be the
+      same no matter which order the tests run in.
+    </p>
+    <p>
       The <code>wire.js</code> file is loaded as a module, which allows it to
       import the development build of Holster. You can switch to the production
       build by changing the import path at the top of the file.
