Check if there are updates to store since secure mode drops unsigned data

--- a/examples/user.html
+++ b/examples/user.html
@@ -11,7 +11,7 @@
       Holster.user API. See the console log for test output.
     </p>
     <p>
-      The tests create two Holster users, Alice and Bob. They both write data to
+      The tests create two users, Alice and Bob. They both write data to
       their own user space. Bob writes secret data that can only be read by
       Alice, then Alice logs in again to read the message.
     </p>
