--- a/examples/index.html
+++ b/examples/index.html
@@ -12,8 +12,8 @@
     </p>
     <p>
       The tests make two updates to the same data, but they occur in random
-      order. The "species" field is then logged and should match the update
-      that happened last.
+      order. The "species" field is then logged and should match the update that
+      happened last.
     </p>
     <p>
       The <code>index.js</code> file is loaded as a module, which allows it to
