--- a/examples/wire.html
+++ b/examples/wire.html
@@ -14,8 +14,8 @@
     <p>
       These tests also make two updates in random order, but the wire API can
       set state vectors on updates to control which value should be applied.
-      This means when the "species" field is logged it will always be the
-      same no matter which order the tests run in.
+      This means when the "species" field is logged it will always be the same
+      no matter which order the tests run in.
     </p>
     <p>
       The <code>wire.js</code> file is loaded as a module, which allows it to
