--- a/examples/user.html
+++ b/examples/user.html
@@ -11,9 +11,9 @@
       Holster.user API. See the console log for test output.
     </p>
     <p>
-      The tests create two users, Alice and Bob. They both write data to
-      their own user space. Bob writes secret data that can only be read by
-      Alice, then Alice logs in again to read the message.
+      The tests create two users, Alice and Bob. They both write data to their
+      own user space. Bob writes secret data that can only be read by Alice,
+      then Alice logs in again to read the message.
     </p>
     <p>
       These tests also show how to use the SEA API (Security, Encryption, and
